Update API URL and add deploy script

--- a/sc-nuxt/package.json
+++ b/sc-nuxt/package.json
@@ -6,13 +6,15 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "nuxt generate && gh-pages -d dist"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^1.0.0-rc.1",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/node": "^18",
+    "gh-pages": "^6.1.1",
     "nuxt": "^3.6.1"
   }
 }
